@@ -25,7 +25,8 @@ Note that this README is _NOT_ part of an end-user release distribution.
 ### Prerequisites
 
 Starka has been built and tested on linux systems only. It is currently
-maintained for Centos5,6 and Ubuntu 12.04.
+maintained for CentOS 5,6 and Ubuntu 12.04,14.04 (with gcc updated to meet
+the minimum version where required).
 
 #### Compilation prerequisites:
 
@@ -33,7 +34,7 @@ Starka requires a compiler supporting most of the C++11 standard. These are the
 current minimum versions enforced by the build system:
 
 * python 2.4+
-* gcc 4.7+ OR clang 3.2+
+* gcc 4.7+ OR clang 3.2+ (OR Visual Studio 2013+, see windev note below)
 * libz (including headers)
 
 #### Runtime prerequisites
@@ -97,4 +98,25 @@ Developer build configuration
 When the Starka source is cloned from git, it is configured for development
 rather than end-user distribution. As such, all builds include -Werror. If
 cppcheck is found any detected issue is converted to a build error.
+
+
+Windows developer support
+-------------------------
+
+Starka does not link or run on windows. The build system does however
+facilitate developers preferring to use Visual Studio. During
+windows cmake configuration all final library linking is disabled and all
+third party libraries are unpacked such that their headers can be
+included, but the libraries are not compiled. Cmake generated VS solutions allow
+the c++ code to be browsed, analyzed and compiled to the library level.
+Note that unit tests can not be run under this scheme -- just like the other
+runtime binaries, they can't be linked without building 3rd party libraries.
+
+Note that the c++11 features used by manta require at least Visual Studio
+2013. In addition to VS2013 and cmake, a zlib installation is required. The
+simplist way to do this may be to use the gnuwin32 pacakge here:
+
+http://gnuwin32.sourceforge.net/packages/zlib.htm
+
+This library will enable building for 32 bit only.
 
