@@ -105,7 +105,7 @@ private:
 
     enum { qscore_bits = 6 };
 
-    uint16_t qscore: qscore_bits;
+    uint16_t qscore:qscore_bits;
 public:
     uint16_t base_id:4;
     uint16_t is_fwd_strand:1;
