@@ -32,6 +32,7 @@
 #include <sstream>
 
 
+
 static
 void
 unknown_cigar_error(const char* const cigar,
