@@ -71,6 +71,7 @@ def main() :
     checkCmd.append("--force")
     checkCmd.append("--verbose")
     checkCmd.append("--quiet")
+    checkCmd.append("--inline-suppr")
 
     # manipulate the warning messages so that they look like gcc errors -- this enables IDE parsing of error location:
     checkCmd.append("--template={file}:{line}:1: error: {severity}:{message}")
